fixing alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -761,7 +761,7 @@ ul.portfolio li.active {
     background-size: cover;
     background-position: 50% 50%;
     z-index: 1;
-    height: 100%;
+    height: 70%;
     margin-top: 5px;
     margin-bottom: 5px;
 }
@@ -886,7 +886,7 @@ ul.portfolio li.active {
 
 .contact-us {
   position: relative;
-  height: 100%;
+/*   height: 100%; */
   background: url(../images/bg/contact-bg.jpg);
   background-size: cover;
   z-index: 1;
